Gu middleground tweaks

--- a/code/test_gu.ipynb
+++ b/code/test_gu.ipynb
@@ -167,16 +167,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-28.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "BoundingBox(x=349, y=124, w=252, h=351)"
+       "(BoundingBox(x=349, y=124, w=252, h=351), np.float64(-28.0))"
       ]
      },
      "execution_count": 11,
@@ -192,225 +185,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-22.0\n",
-      "-25.0\n",
-      "-24.0\n",
-      "-24.0\n",
-      "-26.0\n",
-      "-23.0\n",
-      "-24.0\n",
-      "-20.0\n",
-      "-21.0\n",
-      "-21.0\n",
-      "-19.0\n",
-      "-24.0\n",
-      "-19.0\n",
-      "-21.247265625\n",
-      "-26.0\n",
-      "-22.0\n",
-      "-22.0\n",
-      "-22.0\n",
-      "-25.0\n",
-      "-23.0\n",
-      "-24.0\n",
-      "-23.728372361123647\n",
-      "-25.0\n",
-      "-21.0\n",
-      "-20.0\n",
-      "-20.0\n",
-      "-21.72921524780727\n",
-      "-21.0\n",
-      "-23.849714285714285\n",
-      "-25.0\n",
-      "-22.0\n",
-      "-20.0\n",
-      "-27.0\n",
-      "-26.0\n",
-      "-28.0\n",
-      "-31.0\n",
-      "-27.0\n",
-      "-25.0\n",
-      "-25.0\n",
-      "-29.0\n",
-      "-19.0\n",
-      "-24.0\n",
-      "-24.648440702129555\n",
-      "-29.849499714122356\n",
-      "-24.0\n",
-      "-23.0\n",
-      "-31.0\n",
-      "-22.0\n",
-      "-27.0\n",
-      "-26.0\n",
-      "-27.0\n",
-      "-27.0\n",
-      "-28.947759684563586\n",
-      "-26.7\n",
-      "-26.8\n",
-      "-27.8\n",
-      "-23.8\n",
-      "-20.9\n",
-      "-16.9\n",
-      "-18.0\n",
-      "-17.54952517907532\n",
-      "-24.0\n",
-      "-23.0\n",
-      "-26.0\n",
-      "-25.0\n",
-      "-19.0\n",
-      "-30.0\n",
-      "-27.0\n",
-      "-26.0\n",
-      "-25.0\n",
-      "-24.9\n",
-      "-24.9\n",
-      "-24.8\n",
-      "-22.9\n",
-      "-23.0\n",
-      "-26.0\n",
-      "-22.0\n",
-      "-17.64889705882353\n",
-      "-22.0\n",
-      "-24.0\n",
-      "-24.0\n",
-      "-25.0\n",
-      "-27.0\n",
-      "-30.0\n",
-      "-18.0\n",
-      "-25.0\n",
-      "-30.0\n",
-      "-25.0\n",
-      "-20.0\n",
-      "-26.0\n",
-      "-27.5\n",
-      "-29.6\n",
-      "-25.7\n",
-      "-25.6\n",
-      "-22.9\n",
-      "-27.8\n",
-      "-24.8\n",
-      "-26.7\n",
-      "-26.6\n",
-      "-28.0\n",
-      "-23.196787148594378\n",
-      "-28.0\n",
-      "-25.0\n",
-      "-22.0\n",
-      "-21.0\n",
-      "-19.0\n",
-      "-16.0\n",
-      "-15.0\n",
-      "-19.0\n",
-      "-16.0\n",
-      "-14.0\n",
-      "-17.0\n",
-      "-17.0\n",
-      "-15.0\n",
-      "-15.0\n",
-      "-16.0\n",
-      "-16.0\n",
-      "-17.0\n",
-      "-19.0\n",
-      "-16.0\n",
-      "-17.0\n",
-      "-19.34808429118774\n",
-      "-14.397123077181503\n",
-      "-21.8\n",
-      "-19.5\n",
-      "-21.995498186815443\n",
-      "-17.5\n",
-      "-12.99955022347683\n",
-      "-18.9\n",
-      "-15.7\n",
-      "-16.7\n",
-      "-12.2\n",
-      "-11.9\n",
-      "-9.5\n",
-      "-12.0\n",
-      "-12.6\n",
-      "-9.7\n",
-      "-10.2\n",
-      "-9.6\n",
-      "-6.6\n",
-      "-5.7\n",
-      "-5.105572809000084\n",
-      "-6.7\n",
-      "-7.7\n",
-      "-7.8\n",
-      "-8.9\n",
-      "-8.0\n",
-      "-8.0\n",
-      "-7.0\n",
-      "-12.0\n",
-      "-6.0\n",
-      "-8.0\n",
-      "-5.0\n",
-      "-5.0\n",
-      "-3.0\n",
-      "-6.0\n",
-      "-6.0\n",
-      "-6.0\n",
-      "-9.296739130434784\n",
-      "-9.0\n",
-      "-8.0\n",
-      "-7.0\n",
-      "-11.0\n",
-      "-7.396774193548387\n",
-      "-10.0\n",
-      "-12.8\n",
-      "-14.897068844921602\n",
-      "-14.098270468056525\n",
-      "-15.0\n",
-      "-15.0\n",
-      "-13.0\n",
-      "-17.0\n",
-      "-19.0\n",
-      "-21.0\n",
-      "-21.0\n",
-      "-21.0\n",
-      "-19.0\n",
-      "-20.6\n",
-      "-17.19910229411315\n",
-      "-20.5984496124031\n",
-      "-12.649313786099091\n",
-      "-15.4\n",
-      "-15.0\n",
-      "-15.8\n",
-      "-15.0\n",
-      "-15.0\n",
-      "-16.0\n",
-      "-14.9\n",
-      "-19.849799595879293\n",
-      "-17.0\n",
-      "-20.0\n",
-      "-19.9\n",
-      "-20.8\n",
-      "-22.0\n",
-      "-24.9\n",
-      "-27.9\n",
-      "-27.9\n",
-      "-23.0\n",
-      "-24.84981034234407\n",
-      "-23.9\n",
-      "-25.0\n",
-      "-22.9\n",
-      "-29.0\n",
-      "-24.8\n",
-      "-28.0\n",
-      "-23.7\n",
-      "-24.0\n",
-      "-19.7\n",
-      "-27.9\n",
-      "-22.9\n",
-      "-22.9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    ret, frame = cap.read()\n",
@@ -420,7 +195,7 @@
     "\n",
     "    frame = cv.resize(frame, target_size, dst = frame)\n",
     "    \n",
-    "    my_bbox = gu.track_frame(frame)\n",
+    "    my_bbox, _ = gu.track_frame(frame)\n",
     "\n",
     "    frame2 = cv.rectangle(frame, (my_bbox.x, my_bbox.y), (my_bbox.x + my_bbox.w, my_bbox.y + my_bbox.h), 255, 2)\n",
     "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
@@ -439,34 +214,6 @@
     "cap.release()\n",
     "video_out.release()\n",
     "cv.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cap = cv.VideoCapture(video_path)\n",
-    "# ret, frame = cap.read()\n",
-    "# bbox = BoundingBox(x, y, w, h)\n",
-    "# descriptor = SIFTDescriptor()\n",
-    "# gu = Gu(frame, bbox, descriptor)\n",
-    "# # img_render = cv.rectangle(frame, (x, y),  (x + w, y + h), 255, 2)\n",
-    "# # video_out.write(img2)\n",
-    "# fourcc = cv.VideoWriter_fourcc(*'mp4v')\n",
-    "# video_out = cv.VideoWriter(out_path, fourcc, 30, frame.shape[0:2][::-1])\n",
-    "# for i in range(60):\n",
-    "#     my_frame = np.roll(frame, shift=i, axis=1)\n",
-    "#     bbox_next = gu.track_frame(my_frame)\n",
-    "\n",
-    "#     img2 = cv.rectangle(my_frame, (bbox_next.x, bbox_next.y), (bbox_next.x + bbox_next.w, bbox_next.y + bbox_next.h), 255, 2)\n",
-    "\n",
-    "#     print(bbox_next)\n",
-    "#     video_out.write(img2)\n",
-    "# cap.release()\n",
-    "# video_out.release()\n",
-    "# cv.destroyAllWindows()"
    ]
   }
  ],
