--- a/code/test_FuzzyCMeans.ipynb
+++ b/code/test_FuzzyCMeans.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv.imread('../../images/IMG_1802.jpeg')"
+    "image = cv.imread('../images/IMG_1802.jpeg')"
    ]
   },
   {
@@ -178,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from repo.code.segmentation.segmentation_utils import cleanup"
+    "from segmentation.segmentation_utils import cleanup"
    ]
   },
   {
@@ -231,12 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.patches as mpatches\n",
-    "from segmentation_utils import image_bbox"
+    "from segmentation.segmentation_utils import image_bbox"
    ]
   },
   {
