--- a/code/test_all.ipynb
+++ b/code/test_all.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = \"../videos/jog.mp4\"\n",
+    "video_path = \"../videos/slow_traffic_small.mp4\"\n",
     "out_path = \"/workspaces/python-opencv/repo/out/alltogether.mp4\""
    ]
   },
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "# x, y, w, h = 625, 375, 75, 125\n",
-    "x, y, w, h = 645, 385, 40, 100\n",
+    "# x, y, w, h = 645, 385, 40, 100\n",
+    "x, y, w, h = 300, 180, 100, 60\n",
     "init_bbox = BoundingBox(x, y, w, h)"
    ]
   },
@@ -62,9 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sift_params = {\"sigma\":5, \"nOctaveLayers\":3, \"contrastThreshold\":0.03, \"edgeThreshold\":10}\n",
+    "sift_params = {}\n",
+    "\n",
     "detector = ShiTomasiDetector()\n",
     "optical_flow = LucasKanade()\n",
-    "descriptor = SIFTDescriptor()\n",
+    "descriptor = SIFTDescriptor(params=sift_params)\n",
     "segmenter = FuzzyCMeansSegmenter(5, 0, 10, 2, 2, 10)"
    ]
   },
@@ -89,24 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/150 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 150/150 [03:26<00:00,  1.38s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "img2 = cv.rectangle(frame, (init_bbox.x, init_bbox.y), (init_bbox.x+init_bbox.w, init_bbox.y+init_bbox.h), 255, 2)\n",
     "video_out.write(img2)\n",
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
