--- a/code/test_all.ipynb
+++ b/code/test_all.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = \"../videos/slow_traffic_small.mp4\"\n",
+    "video_path = \"../videos/jog.mp4\"\n",
     "out_path = \"/workspaces/python-opencv/repo/out/alltogether.mp4\""
    ]
   },
@@ -34,8 +34,10 @@
    "source": [
     "# x, y, w, h = 625, 375, 75, 125\n",
     "# x, y, w, h = 645, 385, 40, 100\n",
-    "x, y, w, h = 300, 180, 100, 60\n",
-    "init_bbox = BoundingBox(x, y, w, h)"
+    "# x, y, w, h = 300, 180, 100, 60\n",
+    "x, y, w, h = 645//2, 385//2, 40//2, 100//2\n",
+    "init_bbox = BoundingBox(x, y, w, h)\n",
+    "target_size = (360, 640)[::-1]"
    ]
   },
   {
@@ -54,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ret, frame = cap.read()"
+    "ret, frame = cap.read()\n",
+    "frame = cv.resize(frame, target_size)"
    ]
   },
   {
@@ -64,7 +67,8 @@
    "outputs": [],
    "source": [
     "# sift_params = {\"sigma\":5, \"nOctaveLayers\":3, \"contrastThreshold\":0.03, \"edgeThreshold\":10}\n",
-    "sift_params = {}\n",
+    "sift_params = {\"sigma\": 4, \"nOctaveLayers\":3, \"contrastThreshold\":0.03, \"edgeThreshold\":10}\n",
+    "# sift_params = {}\n",
     "\n",
     "detector = ShiTomasiDetector()\n",
     "optical_flow = LucasKanade()\n",
@@ -93,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 150/150 [09:41<00:00,  3.87s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "img2 = cv.rectangle(frame, (init_bbox.x, init_bbox.y), (init_bbox.x+init_bbox.w, init_bbox.y+init_bbox.h), 255, 2)\n",
     "video_out.write(img2)\n",
@@ -115,6 +111,8 @@
     "\n",
     "    if not ret:\n",
     "        break\n",
+    "\n",
+    "    frame = cv.resize(frame, target_size)\n",
     "\n",
     "    bbox = tracker.track(frame)\n",
     "\n",
