--- a/code/test_all.ipynb
+++ b/code/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,17 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(360, 640, 3)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ret, frame = cap.read()\n",
-    "frame = cv.resize(frame, target_size)"
+    "frame = cv.resize(frame, target_size)\n",
+    "frame.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +90,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[324. 201.]]\n",
+      "\n",
+      " [[340. 211.]]\n",
+      "\n",
+      " [[332. 233.]]\n",
+      "\n",
+      " [[335. 221.]]\n",
+      "\n",
+      " [[334. 193.]]\n",
+      "\n",
+      " [[334. 203.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "tracker = Tracker(frame, init_bbox, detector, optical_flow, descriptor, segmenter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +127,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 1/150 [00:00<00:16,  9.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▍        | 21/150 [00:00<00:02, 52.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▍       | 37/150 [00:00<00:02, 54.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 31%|███       | 46/150 [00:00<00:01, 52.36it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 41%|████▏     | 62/150 [00:01<00:01, 53.99it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 49%|████▉     | 74/150 [00:01<00:01, 55.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 53%|█████▎    | 80/150 [00:01<00:01, 55.72it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 61%|██████    | 91/150 [00:01<00:01, 44.88it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 101/150 [00:02<00:01, 45.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 74%|███████▍  | 111/150 [00:02<00:00, 46.14it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 81%|████████  | 121/150 [00:02<00:00, 46.97it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 87%|████████▋ | 131/150 [00:02<00:00, 46.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 94%|█████████▍| 141/150 [00:02<00:00, 40.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:03<00:00, 49.23it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n",
+      "frame size: (360, 640, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "img2 = cv.rectangle(frame, (init_bbox.x, init_bbox.y), (init_bbox.x+init_bbox.w, init_bbox.y+init_bbox.h), 255, 2)\n",
     "video_out.write(img2)\n",
@@ -113,6 +483,7 @@
     "        break\n",
     "\n",
     "    frame = cv.resize(frame, target_size)\n",
+    "    print(\"frame size:\", frame.shape)\n",
     "\n",
     "    bbox = tracker.track(frame)\n",
     "\n",
@@ -123,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drotrack",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
